# WGL_repo_2024

./: .gitignore  AP-protocol.md  CONTRIBUTE.md  Cargo.toml  README.md
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/controller/: Cargo.toml
crates/controller/src/: command.rs  controller.rs
crates/drone/: Cargo.toml
crates/drone/src/: drone.rs  lib.rs
crates/internal/: Cargo.toml
crates/internal/src/: lib.rs
crates/network/src/: lib.rs  routing.rs
crates/network/src/topology/: mod.rs
crates/packet/: Cargo.toml
crates/packet/src/: lib.rs  message.rs  packet.rs
crates/wg_config/: Cargo.toml
crates/wg_config/src/: config.rs
crates/wg_controller/: Cargo.toml
crates/wg_controller/src/: command.rs  controller.rs  lib.rs
crates/wg_drone/: Cargo.toml
crates/wg_drone/src/: drone.rs
crates/wg_internal/: Cargo.toml
crates/wg_internal/src/: lib.rs
crates/wg_network/: Cargo.toml
crates/wg_network/src/: routing.rs
crates/wg_network/src/topology/: node.rs  route.rs
crates/wg_packet/: Cargo.toml
crates/wg_packet/src/: flood.rs  lib.rs  message.rs  packet.rs
examples/: drone_usage_example.rs  parser.rs
examples/config/: input.toml  parser.rs
examples/drone/: drone_usage.rs
src/: lib.rs  main.rs
src/api/: drone.rs  mod.rs  simulation_controller.rs
src/types/: command.rs  message.rs  mod.rs  packet.rs  source_routing_header.rs
src/types/topology/: mod.rs  nodes.rs  routes.rs
